syntax = "proto3";
import "google/protobuf/timestamp.proto";

package github.com.goto.raccoon;

option go_package = "github.com/goto/raccoon/proto";

message TotalEventCountMessage {
  google.protobuf.Timestamp event_timestamp = 1; //partition column
  int32 event_count = 2;
}